[XFA] Use `align-items: flex-start;` to improve browser compatibility (issue 13518)
https://developer.mozilla.org/en-US/docs/Web/CSS/align-items#browser_compatibility

--- a/web/xfa_layer_builder.css
+++ b/web/xfa_layer_builder.css
@@ -118,7 +118,7 @@
 .xfaTop {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .xfaTop > .xfaCaption {
@@ -128,7 +128,7 @@
 .xfaBottom {
   display: flex;
   flex-direction: column-reverse;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .xfaBottom > .xfaCaption {
